--- a/index.html
+++ b/index.html
@@ -72,6 +72,19 @@
             oninput="setExerciseCount('handstandCount', this.value)"></li>
       </ul>
     </section>
+
+    <!-- Image Upload Section -->
+    <section id="image-upload">
+      <h2>Daily Picture</h2>
+      <form id="uploadForm" enctype="multipart/form-data">
+        <input type="file" id="imageInput" name="image" accept="image/*" required>
+        <button type="button" class="btn btn-primary" onclick="handleImageUpload()">Upload Image</button>
+      </form>
+      <div id="imageOutput" class="mt-2"></div>
+    </section>
+
+
+    
   </main>
 
   <!-- Bootstrap JS and dependencies -->
